Refactor; Add make directives; cleanup

--- a/.editorconfig
+++ b/.editorconfig
@@ -4,3 +4,11 @@ indent_style = tab
 indent_size = 2
 end_of_line = lf
 insert_final_newline = true
+
+[*.sh]
+shell_variant      = posix
+binary_next_line   = false
+switch_case_indent = true
+space_redirects    = false
+keep_padding       = true
+function_next_line = false
